objects/Goods__c/Goods__c.object-meta.xml
<CustomObject>
    <label>Goods</label>
    <nameField>
        <label>Goods Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>