objects/Goods__c/fields/Earned_Money__c.field-meta.xml
<CustomField>
    <fullName>Earned_Money__c</fullName>
    <formula>Current_Value__c -  Total_Invested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earned Money</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>