objects/Goods__c/fields/Investment__c.field-meta.xml
<CustomField>
    <fullName>Investment__c</fullName>
    <label>Investment</label>
    <referenceTo>Investment__c</referenceTo>
    <relationshipLabel>Goods</relationshipLabel>
    <relationshipName>Goods</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>