objects/Goods__c/fields/No_Titles__c.field-meta.xml
<CustomField>
    <fullName>No_Titles__c</fullName>
    <label>No. Titles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>