objects/Goods__c/fields/Total_Invested__c.field-meta.xml
<CustomField>
    <fullName>Total_Invested__c</fullName>
    <formula>No_Titles__c *  Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>